--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "employee-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Contents   [Description](#description)   [Installation](#installation)   [Usage](#usage)   [Contribution](#contribution)   [Testing](#testing)   [License](#license)   [Questions](#questions)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +21,6 @@
     "console.table": "^0.10.0",
     "inquirer": "^8.0.0",
     "mysql2": "^2.2.5"
-  }
+  },
+  "devDependencies": {}
 }
